  * HOST-NAMESTRING on physical pathnames now returns a string that is
    valid as a host argument to MERGE-PATHNAMES and to MAKE-PATHNAME.
    (thanks to Christophe Rhodes)
  * The Alpha port handles icache flushing more correctly. (thanks to
    Dan Barlow)
  * More progress has been made toward bootstrapping under CLISP. (thanks
    to Christophe Rhodes)
  * The fasl file format has changed again, because dynamic loading
    on OpenBSD (which has non-ELF object files) motivated some cleanups
    in the way that foreign symbols are transformed and passed around.
  * minor incompatible change: The ASCII RUBOUT character, (CHAR-CODE 127),
    is no longer treated as whitespace by the reader, but instead as
    an ordinary character. Thus e.g. (READ-FROM-STRING "AB") returns
    |AB|, instead of A as it used to.

changes in sbcl-0.7.5 relative to sbcl-0.7.4:
  * bug 140 fixed: redefinition of classes with different supertypes
    is now reflected in the type hierarchy. (thanks to Pierre Mai)
  * minor incompatible change: The LOAD function no longer, when given
    a wild pathname to load, loads all files matching that pathname;
    instead, an error of type FILE-ERROR is signalled.

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.